<resources>
    <string name="app_name" translatable="false">BurgerShack</string>
    <string name="document_cpf" translatable="false">CPF</string>
    <string name="input_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="image_logo">BurgerShack Logo</string>
    <string name="product_hamburgers">Hamburgers</string>
    <string name="product_drinks">Drinks</string>
    <string name="product_desserts">Desserts</string>
    <string name="product_accompaniments">Accompaniments</string>
    <string name="action_bookings">My Bookings</string>
    <string name="title_login">Access your Account</string>
    <string name="title_menu" translatable="false">Menu</string>
    <string name="action_back">Back</string>
    <string name="action_account">My Account</string>
    <string name="product_image">Image of Product</string>
    <string name="title_account">My Account</string>
    <string name="action_logout">Logout</string>
    <string name="title_bookings">My Bookings</string>
    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="action_booking_new">New Booking</string>
    <string name="tilte_booking_new">New Booking</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_people">Booking People</string>
    <string name="booking_info">Booking Information</string>
    <string name="error_download">Error on trying to download data.</string>
    <string name="error">Error</string>
    <string name="error_field_empty">You need to fill this field.</string>
    <string name="error_field_cpf">You need to fill this field with a CPF.</string>
    <string name="error_fields">Check the fields with error.</string>
    <string name="dialog_wait">Wait...</string>
    <string name="dialog_connect">Connecting to the server</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account_logout">Do you really want to logout?</string>
    <string name="action_booking_create">Create Booking</string>
    <string name="booking_cpf">Please confirm your CPF</string>
    <string name="booking_hour">Booking Hour</string>
    <string name="login_forgot">Forgot my password</string>
</resources>
