<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBookingNew"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BookingNewActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutBookingNewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBookingNewLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_logo"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnBookingNewBack"
            android:layout_width="@dimen/app_title_menu_dimen"
            android:layout_height="@dimen/app_title_menu_dimen"
            android:background="@drawable/action_back"
            android:onClick="bookingNewBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgBookingNewLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/txtBookingNewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tilte_booking_new"
        android:textAlignment="center"
        android:textSize="@dimen/app_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBookingNewTitle" />

    <EditText
        android:id="@+id/edtBookingNewCpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/booking_cpf"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookingNewTitle" />

    <EditText
        android:id="@+id/edtBookingNewPeople"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/booking_people"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBookingNewCpf" />

    <EditText
        android:id="@+id/edtBookingNewDate"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/booking_date"
        android:inputType="date"
        android:onClick="bookingDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBookingNewPeople" />

    <EditText
        android:id="@+id/edtBookingNewHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/booking_hour"
        android:inputType="time"
        android:onClick="bookingHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBookingNewDate" />

    <EditText
        android:id="@+id/edtBookingNewInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/booking_info"
        android:inputType="textShortMessage"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBookingNewHour" />

    <Button
        android:id="@+id/btnBookingNewCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/action_booking"
        android:drawablePadding="@dimen/app_icon_button_drawable_padding"
        android:onClick="bookingNewCreate"
        android:padding="10dp"
        android:text="@string/action_booking_create"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textSize="@dimen/app_icon_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBookingNewInfo" />

</android.support.constraint.ConstraintLayout>