<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.AccountActivity">

    <ScrollView
        android:id="@+id/scrollAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layoutAccountTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/titleBackgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnAccountMenu"
                    android:layout_width="@dimen/app_title_menu_dimen"
                    android:layout_height="@dimen/app_title_menu_dimen"
                    android:background="@drawable/action_back"
                    android:onClick="accountBack"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgAccountLogo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgAccountLogo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="65dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/image_logo"
                    android:cropToPadding="false"
                    android:src="@drawable/app_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/txtAccountTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/title_account"
                android:textAlignment="center"
                android:textSize="@dimen/app_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutAccountTitle" />

            <TextView
                android:id="@+id/txtAccountDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAccountTitle" />

            <Button
                android:id="@+id/btnAccountBookingNew"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/action_add"
                android:drawablePadding="@dimen/app_icon_button_drawable_padding"
                android:onClick="accountNewBooking"
                android:text="@string/action_booking_new"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="@dimen/app_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAccountBookings" />

            <Button
                android:id="@+id/btnAccountBookings"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/action_booking"
                android:drawablePadding="@dimen/app_icon_button_drawable_padding"
                android:onClick="accountBookings"
                android:text="@string/action_bookings"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="@dimen/app_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAccountDetails" />

            <Button
                android:id="@+id/btnAccountLogout"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/action_logout"
                android:drawablePadding="@dimen/app_icon_button_drawable_padding"
                android:onClick="accountLogout"
                android:text="@string/action_logout"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textSize="@dimen/app_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAccountBookingNew" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>